--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -2,27 +2,14 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-    <input type="text" id="text" />
-    <input type="button" value="send" onclick="proc()" id="send_btn" />
-    <script>
-        const input = document.getElementById('text');
-        const send = document.getElementById('send_btn');
-        input.addEventListener("keypress", (event) => {
-            if (event.key === "Enter")
-                send.click();
-        })
-        function proc() {
-            if (input.value.toString() != "") {
-                var xhr = new XMLHttpRequest();
-                xhr.open('post', window.location.href.toString() + 'input');
-                xhr.send(input.value.toString());
-                input.value = "";
-            }
-        }
-    </script>
+    <div id="listbox_group"></div>
+    <br>
+    <input type="button" value="確定" onclick="proc()" id="send_btn" />
+    <script src="script.js"></script>
 </body>
 
 </html>
