--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -1,15 +1,16 @@
 <html>
 
-<head>
-    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
-    <link rel="stylesheet" href="style.css" />
-</head>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
+        <link rel="stylesheet" href="style.css" />
+    </head>
 
-<body>
-    <div id="listbox_group"></div>
-    <br>
-    <input type="button" value="確定" onclick="proc()" id="send_btn" />
-    <script src="script.js"></script>
-</body>
+    <body>
+        <div class="center"><h1>P2C GUI</h1></div>
+        <div id="listbox_group"></div>
+        <br>
+        <input type="button" value="確定" onclick="proc()" id="send_btn" />
+        <script src="script.js"></script>
+    </body>
 
 </html>
