--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <div class="center"><h1>P2C GUI</h1></div>
+        <div class="center" id="title"><h1>P2C GUI</h1></div>
         <div id="listbox_group"></div>
         <br>
         <input type="button" value="確定" onclick="proc()" id="send_btn" />
