--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -6,10 +6,13 @@
     </head>
 
     <body>
-        <div class="center" id="title"><h1>P2C GUI</h1></div>
+        <div class="center" id="title"><h1><img style="vertical-align: middle"
+                    src="https://upload.wikimedia.org/wikipedia/zh/d/d3/Emblem_of_National_Taichung_University_of_Education.svg"
+                    alt="logo" width="100" height="75" /> P2C GUI</h1></div>
         <div id="listbox_group"></div>
         <br>
-        <input type="button" value="確定" onclick="proc()" id="send_btn" />
+        <input style="color: antiquewhite" type="button" value="確定"
+            onclick="proc()" id="send_btn" />
         <script src="script.js"></script>
     </body>
 
