--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -11,7 +11,7 @@
                 src="https://upload.wikimedia.org/wikipedia/zh/d/d3/Emblem_of_National_Taichung_University_of_Education.svg"
                 alt="logo" width="100" height="75" /> P2C GUI</h1>
     </div>
-    <div id="listbox_group"></div>
+    <div id="listBox_group"></div>
     <br>
     <input style="color: antiquewhite" type="button" value="確定" onclick="proc()" id="send_btn" />
     <input style="color: antiquewhite" type="button" value="TEST" id="test_btn" />
