平面動畫設計

--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -13,8 +13,8 @@
     </div>
     <div id="listBox_group"></div>
     <br>
-    <input style="color: antiquewhite" type="button" value="確定" onclick="proc()" id="send_btn" />
-    <input style="color: antiquewhite" type="button" value="TEST" id="test_btn" />
+    <input style="color: rgb(0, 0, 0)" type="button" value="確定" onclick="proc()" id="send_btn" />
+    <input style="color: rgb(0, 0, 0)" type="button" value="TEST" id="test_btn" />
     <script src="script.js"></script>
 </body>
 
