--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -13,7 +13,7 @@
     </div>
     <div id="listBox_group"></div>
     <br>
-    <input style="color: antiquewhite" type="button" value="確定" onclick="proc()" id="send_btn" />
+    <input style="color: antiquewhite" type="button" value="確定" onclick="sendJSON()" id="send_btn" />
     <input style="color: antiquewhite" type="button" value="TEST" id="test_btn" />
     <script src="script.js"></script>
 </body>
